--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ test-server ]
+    branches: [ master ]
   pull_request:
-    branches: [ test-server ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -59,7 +59,7 @@ jobs:
         body: |
           - Version: ${{ env.resource_version }}
           - resource-pack-sha1=${{ env.resource_sha }}
-          - resource-pack=https\://github.com/TheWebbe/Swagcraft-Resources/releases/download/refs%2Fheads%2Fmain/release.SwagTest-Resources.zip
+          - resource-pack=https\://github.com/TheWebbe/Swagcraft-Test-Resources/releases/download/master/SwagTest-Resources.zip
         draft: false
         prerelease: false
     
@@ -71,5 +71,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: release/SwagTest-Resources.zip
-        asset_name: release/SwagTest-Resources.zip
+        asset_name: SwagTest-Resources.zip
         asset_content_type: application/zip
